# src/app/Http/Requests/StoreArticleRequest.php
@@ -2,22 +2,20 @@
 
 namespace App\Http\Requests;
 
+use Illuminate\Contracts\Validation\ValidationRule;
 use Illuminate\Foundation\Http\FormRequest;
 
 /**
  * @OA\Schema(
- *     schema="LoginRequest",
- *     title="LoginRequest",
- *     @OA\Property(property="email", type="string", example="example@example.com"),
- *     @OA\Property(property="password", type="string", example="Password1!")
+ *     schema="StoreArticleRequest",
+ *     title="StoreArticleRequest",
+ *     @OA\Property(property="content", type="string", example="text based article")
  * )
  */
-class LoginRequest extends FormRequest
+class StoreArticleRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
-     *
-     * @return bool
      */
     public function authorize(): bool
     {
@@ -27,13 +25,12 @@ class LoginRequest extends FormRequest
     /**
      * Get the validation rules that apply to the request.
      *
-     * @return array
+     * @return array<string, ValidationRule|array|string>
      */
     public function rules(): array
     {
         return [
-            'email'    => ['required', 'email'],
-            'password' => ['required', 'min:8']
+            'content' => ['string']
         ];
     }
 }
