# src/app/Http/Resources/UserResource.php
@@ -10,8 +10,8 @@ use Illuminate\Http\Resources\Json\JsonResource;
  *     schema="User",
  *     title="User",
  *     @OA\Property(property="uuid", type="string", example="389ffffe-b89c-47b6-bc63-cf5fd2a88218"),
- *     @OA\Property(property="username", type="string", example="example-username"),
- *     @OA\Property(property="email", type="string", example="example@example.com"),
+ *     @OA\Property(property="username", type="string", example="my-username"),
+ *     @OA\Property(property="email", type="string", example="example@example.com")
  * )
  */
 class UserResource extends JsonResource
