# src/app/Models/User/RelationshipTrait.php
@@ -2,6 +2,9 @@
 
 namespace App\Models\User;
 
+use App\Models\Article\Article;
+use Illuminate\Database\Eloquent\Relations\HasMany;
+
 /**
  * Trait RelationshipTrait
  *
@@ -9,4 +12,13 @@ namespace App\Models\User;
  */
 trait RelationshipTrait
 {
+    /**
+     * Return the Articles that belong to the User.
+     *
+     * @return HasMany
+     */
+    public function articles(): HasMany
+    {
+        return $this->hasMany(Article::class);
+    }
 }
